--- a/src/components/SortAndFilter/index.css
+++ b/src/components/SortAndFilter/index.css
@@ -2,8 +2,7 @@
     display: flex;
     height: 40px;
     border: 1px solid black;
-
-    margin: auto;
+    padding: 0 15px;
     align-items: center;
     justify-content: space-between;
 }
